# currency-exchanger

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  .env.development  Dockerfile  manage.py  pyproject.toml
backend/currency_exchanger/: asgi.py  celery.py  exceptions.py  settings.py  urls.py  validators.py  views.py  wsgi.py
backend/currency_exchanger/currencies/: __init__.py  admin.py  apps.py  fixer_api.py  models.py  rates.py  serializers.py  signals.py  tasks.py  views.py
backend/currency_exchanger/currencies/management/commands/: update_currency_rates.py
backend/currency_exchanger/currencies/migrations/: 0001_initial.py  0002_auto_20201108_1638.py  0002_auto_20201108_1701.py  0003_add_unique_constraints.py  0003_update_currency_fields.py  0004_auto_20210105_2114.py  0004_currencyexchange_amount_to.py  0004_currencytransfer.py  0005_merge_20201221_1246.py  0005_merge_20210104_1543.py
backend/currency_exchanger/stocks/: __init__.py  admin.py  apps.py  models.py  polygon_api.py  serializers.py  signals.py  stocks.py  tasks.py  views.py
backend/currency_exchanger/stocks/management/commands/: update_stocks.py
backend/currency_exchanger/stocks/migrations/: 0001_initial.py  0002_auto_20201108_1638.py  0002_auto_20201108_1701.py  0003_add_unique_constraints.py  0004_auto_20201207_2126.py  0005_auto_20201219_1428.py  0005_auto_20201220_2017.py  0006_auto_20210104_1558.py
backend/currency_exchanger/transfers/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/currency_exchanger/transfers/migrations/: 0001_initial.py
backend/currency_exchanger/users/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
backend/currency_exchanger/users/migrations/: 0001_initial.py  0002_userinfo.py  0003_auto_20201027_1419.py  0004_auto_20201108_1638.py  0004_auto_20201108_1701.py
backend/currency_exchanger/wallets/: __init__.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/currency_exchanger/wallets/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_currencies.py  test_transfers.py  test_users.py  test_wallet.py
currency_exchanger/currency_exchanger/: asgi.py  settings.py  wsgi.py
f2/src/: store.js
frontend/: Dockerfile  Dockerfile.prod  cypress.json  data.json  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  (+2 more)
helm_chart/: Chart.yaml  secrets.template.yaml  values.yaml
(+46 files in other folders)
