[tool.poetry]
name = "currency-exchanger"
version = "0.1.0"
description = ""
authors = ["FractialCopper <35343054+FractialCopper@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
